--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/LoginScreen.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/LoginScreen.fxml
@@ -36,7 +36,7 @@
                 <Label fx:id="label_wrongPassword" layoutX="40.0" layoutY="264.0" textFill="RED" />
             <JFXTextField fx:id="textFieldPassword" layoutX="40.0" layoutY="225.0" onAction="#btn_login" prefHeight="25.0" prefWidth="191.0" />
             <JFXPasswordField fx:id="password_box" layoutX="40.0" layoutY="225.0" onAction="#btn_login" prefHeight="25.0" prefWidth="191.0" promptText="Password" />
-            <JFXButton fx:id="btn_login" layoutX="257.0" layoutY="225.0" onAction="#btn_login" style="-fx-background-color: orange;" text="Login">
+            <JFXButton id="button" fx:id="btn_login" layoutX="257.0" layoutY="225.0" onAction="#btn_login" stylesheets="@style/default_style.css" text="Login">
                <font>
                   <Font size="13.0" />
                </font>
