--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/EditEntry.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/EditEntry.fxml
@@ -72,5 +72,6 @@
       </JFXButton>
       <JFXButton fx:id="btn_historie" layoutX="108.0" layoutY="256.0" text=" " />
       <JFXComboBox fx:id="comboBoxHistorie" focusColor="#ffffff00" layoutX="50.0" layoutY="385.0" prefHeight="32.0" prefWidth="222.0" unFocusColor="WHITE" />
+      <Label fx:id="labelTimestamp" layoutX="285.0" layoutY="393.0" prefHeight="17.0" prefWidth="142.0" />
    </children>
 </AnchorPane>
