--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
@@ -206,7 +206,7 @@
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btn_settings" layoutX="21.0" layoutY="527.0" onAction="#btn_settings" prefHeight="50.0" prefWidth="180.0" text="  Settings" textAlignment="RIGHT" textFill="WHITE">
+            <JFXButton fx:id="btn_settings" layoutX="21.0" layoutY="527.0" onAction="#btn_settings" prefHeight="50.0" prefWidth="180.0" text="Options" textAlignment="RIGHT" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
