--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
@@ -50,7 +50,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXButton>
-                  <JFXTextField editable="false" text="// Integer Value" GridPane.columnIndex="3">
+                  <JFXTextField fx:id="textField_settings_description1" editable="false" text="Only Numbers 1-30" GridPane.columnIndex="3">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -70,7 +70,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXButton>
-                  <JFXTextField text="// Integer Value" GridPane.columnIndex="3" GridPane.rowIndex="1">
+                  <JFXTextField fx:id="textField_settings_description2" text="Only Numbers 1-30" GridPane.columnIndex="3" GridPane.rowIndex="1">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -90,7 +90,7 @@
                         <Font name="System Bold" size="14.0" />
                      </font>
                   </JFXButton>
-                  <JFXTextField editable="false" text="// Integer Value (time in seconds)" GridPane.columnIndex="3" GridPane.rowIndex="2">
+                  <JFXTextField fx:id="textField_settings_description3" editable="false" text="Only Numbers 1-30" GridPane.columnIndex="3" GridPane.rowIndex="2">
                      <font>
                         <Font size="14.0" />
                      </font>
@@ -125,7 +125,7 @@
             <JFXTreeTableView fx:id="tableView_recylce" prefHeight="530.0" prefWidth="700.0" />
          </children>
       </AnchorPane>
-      <AnchorPane id="topBar" layoutX="193.0" layoutY="25.0" prefHeight="70.0" prefWidth="707.0" stylesheets="@style/default_style.css">
+      <AnchorPane id="topBar" layoutX="200.0" layoutY="25.0" prefHeight="70.0" prefWidth="700.0" stylesheets="@style/default_style.css">
          <children>
             <JFXTextField id="searchField" fx:id="textField_Search" focusColor="WHITE" layoutX="225.0" layoutY="12.0" onKeyTyped="#searchFunction" prefHeight="41.0" prefWidth="297.0" promptText="    Search...." stylesheets="@style/default_style.css" unFocusColor="#d3cece">
                <font>
@@ -144,69 +144,69 @@
             </JFXButton>
          </children>
       </AnchorPane>
-      <AnchorPane id="sideBar" layoutX="-6.0" layoutY="27.0" prefHeight="600.0" prefWidth="207.0" stylesheets="@style/default_style.css">
+      <AnchorPane id="sideBar" layoutY="25.0" prefHeight="600.0" prefWidth="200.0" stylesheets="@style/default_style.css">
          <children>
-            <ImageView fitHeight="25.0" fitWidth="35.0" layoutX="20.0" layoutY="540.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="25.0" fitWidth="35.0" layoutX="7.0" layoutY="540.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/Settings_icon.png" />
                </image>
             </ImageView>
-            <JFXButton fx:id="btn_finance" layoutX="21.0" layoutY="126.0" onAction="#btn_finance" prefHeight="50.0" prefWidth="180.0" text="Finance" textFill="WHITE">
+            <JFXButton fx:id="btn_finance" layoutX="-1.0" layoutY="126.0" onAction="#btn_finance" prefHeight="51.0" prefWidth="203.0" text="Finance" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btn_social" layoutX="21.0" layoutY="167.0" onAction="#btn_social" prefHeight="50.0" prefWidth="180.0" text="Social" textFill="WHITE">
+            <JFXButton fx:id="btn_social" layoutX="-3.0" layoutY="167.0" onAction="#btn_social" prefHeight="51.0" prefWidth="203.0" text="Social" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btn_email" layoutX="21.0" layoutY="209.0" onAction="#btn_email" prefHeight="50.0" prefWidth="180.0" text="E-Mail" textFill="WHITE">
+            <JFXButton fx:id="btn_email" layoutX="-3.0" layoutY="209.0" onAction="#btn_email" prefHeight="51.0" prefWidth="203.0" text="E-Mail" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btn_network" layoutX="21.0" layoutY="250.0" onAction="#btn_network" prefHeight="50.0" prefWidth="180.0" text="Network" textFill="WHITE">
+            <JFXButton fx:id="btn_network" layoutX="-1.0" layoutY="258.0" onAction="#btn_network" prefHeight="51.0" prefWidth="203.0" text="Others" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <ImageView fitHeight="29.0" fitWidth="35.0" layoutX="20.0" layoutY="137.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="29.0" fitWidth="35.0" layoutX="8.0" layoutY="137.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/dollar_icon.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="20.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="36.0" fitWidth="31.0" layoutX="7.0" layoutY="177.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/User-Group.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="29.0" fitWidth="35.0" layoutX="20.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="29.0" fitWidth="35.0" layoutX="8.0" layoutY="220.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/letter.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="29.0" fitWidth="35.0" layoutX="20.0" layoutY="486.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="29.0" fitWidth="35.0" layoutX="5.0" layoutY="486.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@images/recycle.png" />
                </image>
             </ImageView>
-            <ImageView fx:id="btn_logo" fitHeight="58.0" fitWidth="90.0" layoutX="56.0" layoutY="14.0" onMouseClicked="#btn_logo" pickOnBounds="true" preserveRatio="true">
+            <ImageView fx:id="btn_logo" fitHeight="101.0" fitWidth="130.0" layoutX="29.0" layoutY="14.0" onMouseClicked="#btn_logo" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/logo.png" />
+                  <Image url="@images/logoJpasswortBunkerWhiteFont.png" />
                </image>
             </ImageView>
-            <ImageView fitHeight="29.0" fitWidth="55.0" layoutX="8.0" layoutY="258.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="30.0" fitWidth="31.0" layoutX="7.0" layoutY="266.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@images/wifi_icon.png" />
+                  <Image url="@images/folder.png" />
                </image>
             </ImageView>
-            <JFXButton fx:id="btn_recycle" layoutX="21.0" layoutY="475.0" onAction="#btn_recycle" prefHeight="50.0" prefWidth="180.0" text=" Recycle" textFill="WHITE">
+            <JFXButton fx:id="btn_recycle" layoutX="-1.0" layoutY="469.0" onAction="#btn_recycle" prefHeight="58.0" prefWidth="203.0" text=" Recycle" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
             </JFXButton>
-            <JFXButton fx:id="btn_settings" layoutX="21.0" layoutY="527.0" onAction="#btn_settings" prefHeight="50.0" prefWidth="180.0" text="Options" textAlignment="RIGHT" textFill="WHITE">
+            <JFXButton fx:id="btn_settings" layoutY="527.0" onAction="#btn_settings" prefHeight="51.0" prefWidth="203.0" text="Options" textAlignment="RIGHT" textFill="WHITE">
                <font>
                   <Font size="24.0" />
                </font>
@@ -223,14 +223,12 @@
           <Menu fx:id="menu_Edit" mnemonicParsing="false" text="Edit">
             <items>
               <MenuItem fx:id="menuItem_NewEntry" mnemonicParsing="false" onAction="#btn_newEntry" text="New Entry" />
-                  <MenuItem mnemonicParsing="false" onAction="#btn_lang_de" text="Deutsch" />
-                  <MenuItem mnemonicParsing="false" onAction="#btn_lang_en" text="Englisch" />
+                  <MenuItem fx:id="menuItem_Settings" mnemonicParsing="false" onAction="#btn_settings" text="Optionen" />
             </items>
           </Menu>
           <Menu fx:id="menu_Help" mnemonicParsing="false" text="Help">
                <items>
                   <MenuItem fx:id="menuItem_About" mnemonicParsing="false" onAction="#btn_about" text="About" />
-                  <MenuItem fx:id="menuItem_Help" mnemonicParsing="false" onAction="#btn_help" text="Help" />
                </items>
           </Menu>
         </menus>
