--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/MainInterface.fxml
@@ -218,6 +218,7 @@
           <Menu fx:id="menu_File" mnemonicParsing="false" text="File">
             <items>
               <MenuItem fx:id="menuItem_NewMasterpassword" mnemonicParsing="false" onAction="#btn_newMasterPassword" text="New Masterpassword" />
+                  <MenuItem fx:id="menuItem_Exit" mnemonicParsing="false" onAction="#btn_exit" text="Exit" />
             </items>
           </Menu>
           <Menu fx:id="menu_Edit" mnemonicParsing="false" text="Edit">
