--- a/JPasswortBunker/src/jpasswortbunker/mgm/view/SetMasterPassword.fxml
+++ b/JPasswortBunker/src/jpasswortbunker/mgm/view/SetMasterPassword.fxml
@@ -15,8 +15,9 @@
          </image>
       </ImageView>
       <Label fx:id="labelErrorMessage" layoutX="96.0" layoutY="225.0" prefHeight="17.0" prefWidth="161.0" textFill="RED" />
-      <JFXPasswordField fx:id="passwordField1" layoutX="96.0" layoutY="137.0" prefHeight="25.0" prefWidth="187.0" promptText="Masterpassword" />
-      <JFXPasswordField fx:id="passwordField2" layoutX="96.0" layoutY="186.0" onAction="#btn_setMasterPassword" prefHeight="25.0" prefWidth="187.0" promptText="Repeat Masterpassword" />
-      <JFXButton fx:id="btn_OK" layoutX="237.0" layoutY="249.0" onAction="#btn_setMasterPassword" prefHeight="35.0" prefWidth="57.0" style="-fx-background-color: orange;" text="OK" />
+      <JFXPasswordField fx:id="passwordField1" layoutX="97.0" layoutY="162.0" prefHeight="25.0" prefWidth="187.0" promptText="Masterpassword" />
+      <JFXPasswordField fx:id="passwordField2" layoutX="97.0" layoutY="200.0" onAction="#btn_setMasterPassword" prefHeight="25.0" prefWidth="187.0" promptText="Repeat Masterpassword" />
+      <JFXButton fx:id="btn_OK" layoutX="283.0" layoutY="242.0" onAction="#btn_setMasterPassword" prefHeight="35.0" prefWidth="57.0" style="-fx-background-color: orange;" text="OK" />
+      <Label layoutX="96.0" layoutY="127.0" prefHeight="17.0" prefWidth="187.0" text="Please set your Masterpassword!" />
    </children>
 </AnchorPane>
